# video_converter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-macos.yml  ci.yml  codeql.yml  compatibility-tests.yml  dependency-review.yml  docs.yml  e2e-tests.yml  release-macos.yml  release.yml
config/: default.json
config/launchd/: com.videoconverter.service.plist.template
docs/: PRD.ko.md  PRD.md  SDS.ko.md  SDS.md  SRS.ko.md  SRS.md  changelog.md  contributing.md  development-plan.ko.md  development-plan.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/adr/: 001-documentation-automation-tools.md
docs/api/: automation.md  converters.md  core.md  extractors.md  processors.md  utils.md
docs/architecture/: 01-system-architecture.ko.md  01-system-architecture.md  02-sequence-diagrams.ko.md  02-sequence-diagrams.md  03-data-flow-and-states.ko.md  03-data-flow-and-states.md  04-processing-procedures.ko.md  04-processing-procedures.md
docs/examples/: automation.md  basic.md  batch.md  error-handling.md  photos.md
docs/guides/: advanced.md  automation.md  cli-usage.md  folder-conversion.md  gui-quickstart.md  gui-usage.md  photos-workflow.md  release-process.md
docs/reference/: 01-codec-comparison.ko.md  01-codec-comparison.md  02-ffmpeg-hevc-encoding.ko.md  02-ffmpeg-hevc-encoding.md  03-videotoolbox-hardware-acceleration.ko.md  03-videotoolbox-hardware-acceleration.md  04-macos-photos-access.ko.md  04-macos-photos-access.md  05-macos-automation-methods.ko.md  05-macos-automation-methods.md  06-system-architecture-overview.ko.md  06-system-architecture-overview.md  07-photos-import-research.ko.md  07-photos-import-research.md
packaging/macos/: Info.plist  build_app.sh  create_dmg.sh  entitlements.plist  video_converter.spec
packaging/macos/homebrew/: update_cask.sh  video-converter.rb
packaging/macos/icons/: README.md
scripts/: evaluate_api_doc_tools.py  generate_diagrams.py  install.sh  uninstall.sh
src/video_converter/: __init__.py  __main__.py
src/video_converter/automation/: __init__.py  launchd.py  notification.py  service_manager.py
src/video_converter/converters/: __init__.py  base.py  factory.py  hardware.py  progress.py  software.py
src/video_converter/core/: __init__.py  concurrent.py  config.py  error_recovery.py  history.py  logger.py  orchestrator.py  session.py  types.py
src/video_converter/extractors/: __init__.py  folder_extractor.py  icloud_handler.py  photos_extractor.py
src/video_converter/gui/: __init__.py  app.py  main_window.py
src/video_converter/gui/dialogs/: __init__.py  result_dialog.py
src/video_converter/gui/menubar/: __init__.py  menubar_app.py
src/video_converter/gui/services/: __init__.py  conversion_service.py  photos_service.py  settings_manager.py  update_service.py
src/video_converter/gui/styles/: __init__.py  theme.py
src/video_converter/gui/views/: __init__.py  convert_view.py  home_view.py  photos_view.py  queue_view.py  settings_view.py
src/video_converter/gui/widgets/: __init__.py  drop_zone.py  progress_card.py  recent_list.py  video_grid.py
src/video_converter/handlers/: __init__.py  photos_handler.py
src/video_converter/importers/: __init__.py  metadata_preservation.py  photos_importer.py
src/video_converter/processors/: __init__.py  codec_detector.py  gps.py  metadata.py  quality_validator.py  retry_manager.py  timestamp.py  verification.py  vmaf_analyzer.py
src/video_converter/reporters/: __init__.py  batch_reporter.py  statistics_reporter.py
src/video_converter/ui/: __init__.py  panels.py  progress.py
src/video_converter/utils/: __init__.py  applescript.py  command_runner.py  constants.py  dependency_checker.py  file_utils.py  progress_parser.py
tests/: conftest.py
tests/fixtures/: README.md
tests/gui/: __init__.py  conftest.py  test_accessibility.py  test_conversion_service.py  test_drop_zone.py  test_e2e.py  test_gui_integration.py  test_main_window.py  test_menubar_app.py  test_performance.py  test_photos_service.py  test_progress_card.py  test_recent_list.py  test_result_dialog.py  test_settings_manager.py  test_theme.py  test_update_service.py  test_usability.py  test_video_grid.py  test_views.py
tests/integration/: test_concurrent_integration.py  test_convert_cli.py  test_error_recovery_integration.py  test_gps_integration.py  test_icloud_folder_integration.py  test_notification_integration.py  test_photos_cli.py  test_photos_reimport.py  test_statistics_integration.py  test_vmaf_integration.py
tests/unit/: test_batch_reporter.py  test_codec_detector.py  test_command_runner.py  test_concurrent.py  test_config.py  test_constants.py  test_converters.py  test_core_types.py  test_dependency_checker.py  test_error_recovery.py  test_file_utils.py  test_folder_extractor.py  test_gps.py  test_history.py  test_icloud_handler.py  test_launchd.py  test_logger.py  test_metadata_processor.py  test_notification.py  test_orchestrator.py  test_panels.py  test_photos_extractor.py  test_photos_handler.py  test_photos_importer.py  test_photos_metadata_preservation.py  test_photos_original_handling.py  test_photos_permissions.py  test_photos_progress.py  test_progress.py  test_progress_parser.py  test_quality_validator.py  test_retry_manager.py  test_service_manager.py  test_session.py  test_statistics_reporter.py  test_timestamp.py  test_ui_progress.py  test_verification.py  test_vmaf_analyzer.py
tests/unit/cli/: __init__.py  conftest.py  test_config_cmd.py  test_convert_cmd.py  test_error_handling.py  test_helpers.py  test_run_cmd.py  test_scan_cmd.py  test_service_cmd.py  test_stats_cmd.py  test_status_cmd.py
