[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-converter"
version = "0.2.0.0"
description = "Automated H.264 to H.265 video conversion for macOS with Photos library integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Video Converter Team" }
]
keywords = [
    "video",
    "converter",
    "hevc",
    "h265",
    "h264",
    "macos",
    "photos",
    "ffmpeg",
    "videotoolbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "osxphotos>=0.70.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
]
gui = [
    "PySide6>=6.6.0",
    "pillow>=10.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xvfb>=3.0.0",
]
packaging = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
video-converter = "video_converter.__main__:main"
video-converter-gui = "video_converter.gui.app:main"

[project.urls]
Homepage = "https://github.com/kcenon/video_converter"
Documentation = "https://github.com/kcenon/video_converter#readme"
Repository = "https://github.com/kcenon/video_converter.git"
Issues = "https://github.com/kcenon/video_converter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
video_converter = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "ARG001",  # unused function argument (often intentional for API consistency)
    "ARG002",  # unused method argument (often intentional for API consistency)
    "SIM102",  # nested if statements (readability preference)
    "SIM105",  # contextlib.suppress (try-except-pass is more explicit)
    "SIM108",  # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["video_converter"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "osxphotos.*",
    "PySide6.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-x",  # Stop on first failure
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests as GUI tests requiring Qt (deselect with '-m \"not gui\"')",
    "e2e: marks tests as end-to-end tests with actual conversions (deselect with '-m \"not e2e\"')",
]

[tool.coverage.run]
source = ["src/video_converter"]
branch = true
omit = [
    "src/video_converter/utils/applescript.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
